# web-aois

./: .gitignore  README.md  setup.cfg
src/: aoi-client.js  aoi_locator_helper.py  image_tools.py  main.py  process.py  record.py  screenshots.py  visualize.py
src/pupil_labs/web_aois/: __init__.py  aoi_locator_helper.py  define.py  process.py  record.py  screenshots.py  visualize.py
src/pupil_labs/web_aois/client/: define.js  record.js
tests/: test_api.py
