[metadata]
name = pupil_labs_web_aois
description = Record and visualize gaze data as a user browses a webpage
long_description = file: README.md
long_description_content_type = text/x-md
url = https://github.com/pupil-labs/web-aois
author = Pupil Labs GmbH
author_email = info@pupil-labs.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
install_requires =
    importlib-metadata;python_version<"3.8"
    scipy
    matplotlib
    pupil-labs-realtime-api
    real-time-screen-gaze
    playwright
    eva-decord
    tqdm
python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    build*
    dist*
    docs*
    tests*

[options.package_data]
pupil_labs.web_aois.client =
    *.js

[options.entry_points]
console_scripts =
    pl-web-aois-define = pupil_labs.web_aois.define:main
    pl-web-aois-record = pupil_labs.web_aois.record:main
    pl-web-aois-process = pupil_labs.web_aois.process:main
    pl-web-aois-screenshots = pupil_labs.web_aois.screenshots:main
    pl-web-aois-visualize = pupil_labs.web_aois.visualize:main

[options.extras_require]
docs =
    jaraco.packaging>=9
    rst.linker>=1.9
    sphinx
testing =
    pytest>=6
    pytest-checkdocs>=2.4
    pytest-cov
    pytest-enabler>=1.3
    pytest-mypy>=0.9.1;python_implementation != "PyPy"
